syntax = "proto3";

package api.common.proto.cartservice;

option go_package = "github.com/ropohub/ropo/protogen/api/common/proto/cartservice;api_proto_cartservice";

import "api/common/proto/header.proto";

service CartService {
  rpc GetCartItems(GetCartItemsRequest) returns (GetCartItemsResponse);

  rpc MutateCart(MutateCartRequest) returns (MutateCartResponse);
}

message GetCartItemsRequest {}

message GetCartItemsResponse {
  ResponseHeader header = 1;

  repeated ItemWithQuantity items_with_quantity = 2;
}

message MutateCartRequest { ItemWithQuantity item = 1; }

message MutateCartResponse { ResponseHeader header = 1; }

message ItemWithQuantity {
  int64 product_variant_id = 1;

  int32 quantity = 2;
}